--- a/aluraplay/composer.json
+++ b/aluraplay/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": ">8.1",
         "ext-pdo": "*",
-      "ext-fileinfo": "*"
+      "ext-fileinfo": "*",
+        "psr/http-message": "^2.0",
+        "nyholm/psr7": "^1.8"
     }
 }
